--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gpt-tokenizer": "^2.1.2",
     "groq-sdk": "^0.8.0",
     "octokit": "^3.1.1",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "python-ast": "^0.1.0"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.20.3",
