--- a/package.json
+++ b/package.json
@@ -12,21 +12,28 @@
     "@octokit/rest": "^20.0.2",
     "@octokit/webhooks-definitions": "^3.67.3",
     "@types/node": "^20.8.3",
+    "axios": "^1.7.7",
     "chalk": "^5.3.0",
     "diff": "^5.1.0",
     "dotenv": "^16.3.1",
     "gpt-tokenizer": "^2.1.2",
     "groq-sdk": "^0.8.0",
     "octokit": "^3.1.1",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-python": "^0.23.4",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.20.3",
     "@types/diff": "^5.0.7",
+    "@types/jest": "^29.5.14",
     "@types/xml2js": "^0.4.13",
     "csv-writer": "^1.6.0",
+    "jest": "^29.7.0",
     "smee-client": "^1.2.3",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.2.2"
   }
+  
 }
