--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.3.1",
     "gpt-tokenizer": "^2.1.2",
     "groq-sdk": "^0.8.0",
-    "octokit": "^3.1.1",
+    "octokit": "^4.0.2",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-python": "^0.23.4",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
