--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "dependencies": {
     "@babel/parser": "^7.23.0",
     "@babel/traverse": "^7.23.2",
+    "@octokit/auth-oauth-app": "^8.1.1",
+    "@octokit/auth-oauth-user": "^5.1.1",
+    "@octokit/request": "^9.1.3",
     "@octokit/rest": "^20.0.2",
     "@octokit/webhooks-definitions": "^3.67.3",
+    "@octokit/webhooks-methods": "^5.1.0",
     "@types/node": "^20.8.3",
     "chalk": "^5.3.0",
     "diff": "^5.1.0",
@@ -20,6 +24,7 @@
     "octokit": "^4.0.2",
     "tree-sitter": "^0.21.1",
     "tree-sitter-python": "^0.23.4",
+    "universal-user-agent": "^7.0.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
