--- a/package.json
+++ b/package.json
@@ -9,22 +9,16 @@
   "dependencies": {
     "@babel/parser": "^7.23.0",
     "@babel/traverse": "^7.23.2",
-    "@octokit/auth-oauth-app": "^8.1.1",
-    "@octokit/auth-oauth-user": "^5.1.1",
-    "@octokit/request": "^9.1.3",
     "@octokit/rest": "^20.0.2",
     "@octokit/webhooks-definitions": "^3.67.3",
-    "@octokit/webhooks-methods": "^5.1.0",
     "@types/node": "^20.8.3",
     "chalk": "^5.3.0",
     "diff": "^5.1.0",
     "dotenv": "^16.3.1",
     "gpt-tokenizer": "^2.1.2",
     "groq-sdk": "^0.8.0",
-    "octokit": "^4.0.2",
-    "tree-sitter": "^0.21.1",
-    "tree-sitter-python": "^0.23.4",
-    "universal-user-agent": "^7.0.2",
+    "octokit": "^3.1.1",
+    "python-ast": "^0.1.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
